Quick-fix subtl flicker bug

--- a/src/styles/stream-thumbnail/index.styl
+++ b/src/styles/stream-thumbnail/index.styl
@@ -8,6 +8,7 @@
     display block
 
   img
+    border-radius 5px
     position absolute
     display block
     width 100%
