--- a/src/styles/streams/stream-card/index.styl
+++ b/src/styles/streams/stream-card/index.styl
@@ -12,7 +12,7 @@
     width 100%
 
   .stream-thumbnail
-    border-radius 4px
+    border-radius 5px
 
   .information-wrapper
     display flex
